RESOLVED FIXED138306
'noreturn' function does return warning in LLVMOverrides.cpp
https://bugs.webkit.org/show_bug.cgi?id=138306
Summary 'noreturn' function does return warning in LLVMOverrides.cpp
Akos Kiss
Reported 2014-11-03 04:02:03 PST
When building with FTL JIT enabled (on x86_64/Linux), gcc is emitting the following warning: [71/651] Building CXX object Source/JavaScriptCore/CMakeFiles/llvmForJSC.dir/llvm/library/LLVMOverrides.cpp.o ../../Source/JavaScriptCore/llvm/library/LLVMOverrides.cpp: In function ‘void abort()’: ../../Source/JavaScriptCore/llvm/library/LLVMOverrides.cpp:57:1: warning: ‘noreturn’ function does return [enabled by default] } ^ No big issue, but it would be better to get rid of it.
Attachments
Proposed patch. (1.88 KB, patch)
2014-11-03 04:04 PST, Akos Kiss
no flags
Proposed patch, v2 (3.17 KB, patch)
2014-11-03 04:44 PST, Akos Kiss
no flags
Akos Kiss
Comment 1 2014-11-03 04:04:37 PST
Created attachment 240839 [details] Proposed patch. No regressions on x86_64/Linux/GTK
Akos Kiss
Comment 2 2014-11-03 04:44:38 PST
Created attachment 240840 [details] Proposed patch, v2 Mac seems to be more rigorous. Adding more NO_RETURNs.
WebKit Commit Bot
Comment 3 2014-11-10 00:00:40 PST
Comment on attachment 240840 [details] Proposed patch, v2 Clearing flags on attachment: 240840 Committed r175802: <http://trac.webkit.org/changeset/175802>
WebKit Commit Bot
Comment 4 2014-11-10 00:00:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.