Fix 'noreturn' function does return warning in LLVMOverrides.cpp https://bugs.webkit.org/show_bug.cgi?id=138306

Patch by Akos Kiss <akiss@inf.u-szeged.hu> on 2014-11-09
Reviewed by Filip Pizlo.

Adding NO_RETURN where needed.

* llvm/library/LLVMExports.cpp:
(initializeAndGetJSCLLVMAPI):
* llvm/library/LLVMOverrides.cpp:
* llvm/library/LLVMTrapCallback.h:

Canonical link: https://commits.webkit.org/156382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175802 268f45cc-cd09-0410-ab3c-d52691b4dbfc